jakarta.el cleanup